# beancount-staging

./: Cargo.toml  README.md  beancount-staging.toml  flake.nix  justfile
.github/workflows/: release.yml
.zed/: tasks.json
crates/beancount-staging/: Cargo.toml
crates/beancount-staging-cli/: Cargo.toml
crates/beancount-staging-cli/src/: config.rs  lib.rs  lint.rs  main.rs  review.rs  show.rs
crates/beancount-staging-predictor/: Cargo.toml
crates/beancount-staging-py/: Cargo.toml  pyproject.toml
crates/beancount-staging-py/.github/workflows/: CI.yml
crates/beancount-staging-py/src/: lib.rs
crates/beancount-staging-web/: Cargo.toml
crates/beancount-staging-web/frontend/: .oxfmtignore  .oxlintrc.json  build.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/beancount-staging-web/frontend/public/: index.html  style.css
crates/beancount-staging-web/frontend/src/: api.test.ts  api.ts  app.ts  autocomplete.ts  directive-renderer.ts  transaction-renderer.ts  types.ts
crates/beancount-staging-web/frontend/src/model/: beancount.ts
crates/beancount-staging-web/frontend/test/: api.test.ts  app.test.ts  directive-renderer.test.ts  transaction-renderer.test.ts
crates/beancount-staging-web/src/: api.rs  lib.rs  main.rs  state.rs  static_files.rs  watcher.rs
crates/beancount-staging-web/tests/: integration_test.rs
crates/beancount-staging/src/: lib.rs  sorting.rs
crates/beancount-staging/src/reconcile/: matching.rs  mod.rs
docs/examples/: journal.beancount  staging.beancount
