[package]
name = "beancount-staging-predictor"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
beancount-parser.workspace = true
beancount-staging = { path = "../beancount-staging" }
clap = { version = "4.5", features = ["derive"] }
smartcore = "0.4"
ndarray = "0.16"
regex = "1.11"
rand = "0.9"

[dev-dependencies]
insta.workspace = true
