[package]
name = "beancount-staging-predictor"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Automatic categorization engine for beancount-staging"
exclude = ["learning_curve.png"]

[dependencies]
anyhow.workspace = true
beancount-parser.workspace = true
beancount-staging = { path = "../beancount-staging" }
clap = { version = "4.6", features = ["derive"] }
smartcore = "0.5"
ndarray = "0.17"
regex = "1.12"
rand = "0.10"

[dev-dependencies]
insta.workspace = true
