[package]
name = "beancount-staging-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "beancount_staging"
crate-type = ["cdylib"]

[dependencies]
beancount-staging-cli = { path = "../beancount-staging-cli" }
beancount-staging-web = { path = "../beancount-staging-web" }
pyo3 = { version = "0.27", features = ["abi3-py37"] }
tokio = "1.49"
