[package]
name = "beancount-staging-web"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
beancount-staging = { path = "../beancount-staging" }
beancount-parser.workspace = true
anyhow.workspace = true

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"
