[package]
name = "beancount-staging-web"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
beancount-staging = { path = "../beancount-staging" }
beancount-parser.workspace = true
anyhow.workspace = true

axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"
