[package]
name = "beancount-staging"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
beancount-parser.workspace = true
rust_decimal = { version = "1.40.0", default-features = false }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
insta.workspace = true
